# nonebot-plugin-ayaka-games

./: .gitignore  __init__.py  build.py  calc_24.py  checkin.py  cy_query.py  dragon.py  genshin_random_event.py  get_30.py  incan.py  pyproject.toml  readme.md  res_info.json  test.py  who_is_suspect.py
ayaka_games/: __init__.py  ayaka_get_thirty.py  ayaka_mana.py  ayaka_master.py  ayaka_who_is_suspect.py  bag.py  bet.py  bili_dy.py  bili_url.py  bingo.py  blur_text.py  calculate.py  checkin.py  chengyu.py  chengyu_query.py  cy_query.py  data.py  dragon.py  fanyi.py  genshin_random_event.py  get_30.py  gs_dragon.py  incan.py  plus_time.py  pray.py  pyproject.toml  readme.md  who_is_suspect.py  word_tax.py
ayaka_games/chengyu/: __init__.py  meaning.json  readme.md
ayaka_games/genshin_dragon/: __init__.py  bin.json  search.json
ayaka_games/incan/: __init__.py  app.py  gaming.py  help.py  inqueue.py  model.py  quit.py  ready.py  status.py
ayaka_games/plugins/: bag.py  bili.py  calc_24.py  checkin.py  cy_query.py  dragon.py  genshin_random_event.py  get_30.py  incan.py  mana.py  nbnhhsh.py  plus_one.py  reminder.py  utils.py  who_is_suspect.py  word_tax.py
ayaka_games/plugins/bag/: __init__.py  utils.py
ayaka_games/plugins/bili/: __init__.py  (+4 more)
ayaka_games/template/: __init__.py  data.json  utils.py
ayaka_games/user_bag/: __init__.py  app.py  mana.py  money.py  utils.py
ayaka_games/utils/: file.py  name.py  time.py  uuid.py
data/ayaka/: root.json
plugins/: bag.py  calc_24.py  checkin.py  dragon.py  plus_one.py  word_tax.py
script/: 0.ini  ayaka_games.ini
(+38 files in other folders)
